# Jarvis

./: .gitignore  README.md
backend/: .env.example  alembic.ini  pyproject.toml  railway.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_activity_route.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/core/: auth.py  config.py  db.py  events.py
backend/app/modules/: registry.py
backend/app/modules/coaching/: models.py  routes.py  schemas.py  service.py
backend/app/modules/core/: models.py  routes.py  schemas.py
backend/app/modules/dashboard/: routes.py  schemas.py  service.py
backend/app/modules/garmin/: models.py  routes.py  schemas.py  service.py
backend/app/modules/nutrition/: ai_service.py  chat_service.py  models.py  routes.py  schemas.py  weight_service.py
backend/app/modules/stripe/: __init__.py  railway_logs.py  routes.py  schemas.py  service.py
backend/tests/: test_health.py
docs/: architecture.md  mac-setup.md
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/(app)/: layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/: providers.tsx
frontend/src/components/activities/: activity-map.tsx  activity-row.tsx
frontend/src/components/dashboard/: cards.tsx  jarvis-hud.tsx
frontend/src/hooks/: use-event-stream.ts
frontend/src/lib/: api.ts  utils.ts
sync-agent/: agent.py  requirements.txt  run.py  sync-agent.yaml.example
sync-agent/adapter/: dtos.py  sqlite_source.py
(+10 files in other folders)
